--- a/principal.html
+++ b/principal.html
@@ -10,7 +10,7 @@
     <header id="header1">
       <table id="menu">
         <tr>
-          <td id="logo"><img src="Logo.jpg" alt="Prepa 6"></td>
+          <td id="logo"><img src="Logo.jpg" alt="Prepa 6" id="logoimg"></td>
           <td id="tabs">Como Jugar</td>
           <td id="tabs">Registros</td>
           <td id="tabs">Galería</td>
